2000-11-17  Max Horn  <max@quendi.de>

	* exult.cc, menulist.cc: Added Cmd-Q which quits exult (MacOS only)
	* gamewin.cc: fixes (crashing) bug realted to Game_window::init_faces() / face_info
	* fixed Makefile.[win32|cygwin|be]

2000-11-17  Tristan Tarrant <nadir@users.sourceforge.net>

	* exult.cc: Game_window::splash is not needed now, so I've
	removed the check in Handle_events. 

2000-11-17  Tristan Tarrant <nadir@users.sourceforge.net>

	* menulist.cc, game.cc: handle events better

2000-11-17  Jeff Freedman  <jeff@amy.nerble.net>

	* Use vector::iterators instead of going through indices.

2000-11-16  Tristan Tarrant <nadir@users.sourceforge.net>

	* files/databuf: Implemented an ExultDataSource which encapsulates
	all actions needed to create a BufferDataSource from a U7object
	* mouse.h, mouse.cc: Allow the use of a different shape file
	* exult.cc, game.cc, game.h, menulist.cc, menulist.h: Make use of 
	the above to have a mouse pointer in the menus

2000-11-16  Tristan Tarrant <nadir@users.sourceforge.net>

	* menulist.cc: fixed usage of vector
	* Makefile.win32, Makefile.cygwin:  updated by Travis Howell

2000-11-16  Jeff Freedman  <jeff@amy.nerble.net>

	* Finished work on removing class Vector that Max started.

2000-11-15  Max Horn  <max@quendi.de>

	* Begun removing class Vector.
	* Made some mac specific changes

2000-11-13  Tristan Tarrant <nadir@users.sourceforge.net>

	* bggame.cc: Load endgame fonts using Font class
	* sigame.cc: Likewise for intro
	* font.cc: Handle fonts coming from IFF files
	* gametxt.cc, gamewin.h: get rid of setup_endgame_fonts()
	* fnames.h: Get rid of some _FONT definitions
	* TODO: updated a bit

2000-11-13  Tristan Tarrant <nadir@users.sourceforge.net>

	* configure.in: make version 0.90alpha1
	* browser.cc: use new Font class

2000-11-12  Jeff Freedman  <jeff@amy.nerble.net>

	* egg.cc (Egg_object): Must be on or above egg.
	(Egg_object): Commented out code which I think is wrong.
